add storage for saving hosts

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
 		"clipboardWrite", /* MOZ */
 		"tabs", 
 		"http://*/*", 
-		"https://*/*"
+		"https://*/*",
+		"storage"
 	],
 	"content_scripts": [
 		{
